# vala-gtk-examples

./: .gitignore  README.md
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.My-First-Gtk-App.json/: init
.flatpak-builder/checksums/: org.gnome.My-First-Gtk-App.json
1.my-first-gtk-app-terminal/: Makefile  my-first-gtk-app  my-first-gtk-app.vala
2.my-first-gtk-app-builder/: meson.build  org.gnome.My-First-Gtk-App.json
2.my-first-gtk-app-builder/.flatpak-builder/cache/refs/heads/x86_64-org.gnome.My-First-Gtk-App.json/: init
2.my-first-gtk-app-builder/.flatpak-builder/ccache/2/7/: 64723fb2badfcb76a5e87a99168963-13842.manifest
2.my-first-gtk-app-builder/.flatpak-builder/ccache/6/: stats
2.my-first-gtk-app-builder/.flatpak-builder/ccache/6/8/: ec71d02095eddd0be3cfa62c5518cf-2322056.d
2.my-first-gtk-app-builder/.flatpak-builder/ccache/8/: stats
2.my-first-gtk-app-builder/.flatpak-builder/ccache/8/4/: 33cd07948f51b303ca9d53e20b5edd-2296301.d
2.my-first-gtk-app-builder/.flatpak-builder/ccache/c/2/: a5ece7151004ae95f9f7b23c1d8ec1-13815.manifest
2.my-first-gtk-app-builder/.flatpak-builder/ccache/f/: stats
2.my-first-gtk-app-builder/.flatpak-builder/ccache/f/7/: c287156c4be5be9e115f6cdf726e9a-1010532.d
2.my-first-gtk-app-builder/data/: meson.build  org.gnome.My-First-Gtk-App.appdata.xml.in  org.gnome.My-First-Gtk-App.desktop.in  org.gnome.My-First-Gtk-App.gschema.xml
2.my-first-gtk-app-builder/po/: POTFILES  meson.build
2.my-first-gtk-app-builder/src/: main.vala  meson.build  my-first-gtk-app.gresource.xml  window.ui  window.vala
